Обновлен код index.html: уменьшена высота баннера и убрана кнопка

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             background-size: cover;
             background-position: center;
             color: white;
-            padding: 5rem 2rem;
+            padding: 3rem 2rem; /* Уменьшили высоту */
             text-align: center;
             border-radius: 10px;
             margin-bottom: 2rem;
@@ -317,7 +317,6 @@
         <section class="hero">
             <h1>Добро пожаловать в by klim</h1>
             <p>Лучшие казино игры, эксклюзивные бонусы и ежедневные раздачи подарков. Присоединяйтесь к нашему сообществу уже сегодня!</p>
-            <a href="#" class="btn">Играть сейчас</a>
         </section>
 
         <section class="features">
@@ -352,7 +351,7 @@
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
-        <p>&copy; 2023 by klim. Все права защищены.</p>
+        <p>© 2023 by klim. Все права защищены.</p>
     </footer>
 
     <script>
